# mobile-node

./: .gitignore  GOOGLE_PLAY_DATA_SAFETY.md  PRIVACY_POLICY.md  README.md  RELEASE.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/: copilot-instructions.md
android/: key.properties.example
android/app/: build.gradle.kts  proguard-rules.pro
integration_test/: simple_test.dart
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: node_models.dart
lib/screens/: console_screen.dart  data_screen.dart  home_screen.dart  main_screen.dart  node_details_screen.dart  node_start_screen.dart  send_screen.dart  settings_screen.dart  stake_screen.dart  staking_screen.dart  wallet_screen.dart  wallet_setup_screen.dart
lib/services/: auth_service.dart  background_service.dart  kadena_service.dart  node_service.dart  node_service_rinf.dart  theme_service.dart  wallet_service.dart
lib/theme/: cyber_backgrounds.dart  cyber_widgets.dart  cyberfly_theme.dart  theme.dart
lib/widgets/: animated_background.dart  empty_state.dart  node_info_card.dart  peer_list.dart  pin_input_dialog.dart  stat_card.dart  status_indicator.dart  ui_components.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
rust/: Cargo.toml
rust/src/: android_init.rs  api.rs  crypto.rs  discovery.rs  frb_generated.rs  lib.rs  network_resilience.rs  node.rs  storage.rs  sync.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  (+1 more)
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+21 files in other folders)
