[package]
name = "rust_lib_cyberfly_mobile_node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

# Iroh networking stack - matching cyberfly-rust-node versions
iroh = { version = "0.95", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-gossip = "0.95"
iroh-blobs = "0.97"

# Storage
sled = { version = "0.34", features = ["compression"] }

# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "fs", "time", "sync"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }

# UUID for operation IDs
uuid = { version = "1.10", features = ["v4"] }

# Crypto
ed25519-dalek = { version = "3.0.0-pre.1", features = ["rand_core"] }
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid"] }
rand = "0.9"
hex = "0.4"
base64 = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Utils
once_cell = "1.19"
parking_lot = "0.12"
futures = "0.3"
bytes = "1.5"
dashmap = "6.0"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[build-dependencies]
flutter_rust_bridge_codegen = "=2.11.1"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
